data/all_generated_tests/raw_wast_tests/br_EdgeCaseFailuresinbr_table_1212.wast
;; 3. **Test Description**: Utilize a `br_table` with an index of -1 (or equivalent low invalid index), and verify whether it triggers the default label.    - **Constraint**: The instruction set must handle negative or invalid low indices by redirecting to the default label.    - **Edge Case Relation**: Ensures edge conditions from invalid low indices are properly managed without causing runtime errors.

(assert_invalid
  (module (func $br_table_invalid_index
    (block (br_table 0 1 -1 (br 2)))
  ))
  "unknown label"
)